--- a/script.css
+++ b/script.css
@@ -49,7 +49,6 @@ body {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    border-radius: 60px;
     border: solid 3px;
 }
 
@@ -64,8 +63,13 @@ body {
     flex-wrap: nowrap;
 }
 
-.fab, .fas {
+.icon {
     color: slategrey;
+    font-size: 2em;
+}
+
+.toolIcon{
+    width: 50px;
 }
 
 .aboutHeader {
@@ -76,9 +80,4 @@ body {
 #languageAndTools {
     position: relative;
     bottom: 4em;
-}
-
-a{
-    height: 50px;
-    width: 50px;
 }
