--- a/script.css
+++ b/script.css
@@ -52,7 +52,7 @@ body {
     border: solid 3px;
 }
 
-.card-text {
+.aboutText {
     position: relative;
     bottom: 75px;
 }
@@ -86,4 +86,10 @@ body {
 #languageAndTools {
     position: relative;
     bottom: 4em;
+}
+.icon:hover{
+    color: #0077B5;
+}
+.fa-github:hover{
+    color: black;
 }
