--- a/style.css
+++ b/style.css
@@ -74,12 +74,14 @@ p {
     box-shadow: 0px 10px 20px -10px rgb(0 0 0 / 75%);
     color: #B3B8CD;
     padding-top: 30px;
-    margin-top: 2rem;
+    margin-top: 2rem!important;
     width: 50vw;
     max-width: 100%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 0!important;
+    padding-right: 0!important;
 }
 
 .profileCard .pro {
@@ -101,11 +103,11 @@ p {
     margin-bottom: 10px;
 }
 
-@media (max-width: 768px) {
-    .card {
-        width: 75vw;
-    }
-}
+/*@media (max-width: 768px) {*/
+/*    .card {*/
+/*        width: 75vw;*/
+/*    }*/
+/*}*/
 
 .projectCard {
     background-color: #404846;
@@ -130,6 +132,9 @@ p {
     .projectCard{
         margin-bottom: 1rem!important;
     }
+}
+.contactText{
+
 }
 .projectCard .pro {
     color: #565d5c;
