--- a/style.css
+++ b/style.css
@@ -1,109 +1,109 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Open Sans", sans-serif;
-    box-sizing: border-box;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
-    background-color: #6e7876 !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
+  background-color: #6e7876 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
 }
 
 .navbar {
-    width: 100vw;
-    color: white;
+  width: 100%;
+  color: white;
 }
 
 h2 {
-    margin: 10px 0;
-    color: #fff;
+  margin: 10px 0;
+  color: #fff;
 }
 
 p {
-    font-size: 15px;
-    line-height: 21px;
-    margin: 15px;
+  font-size: 15px;
+  line-height: 21px;
+  margin: 15px;
 }
-.navbar-text{
-    color: whitesmoke!important;
+.navbar-text {
+  color: whitesmoke !important;
 }
 #myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: #1c1a1aa8;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-    height: 1rem;
-    line-height: 0;
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #1c1a1aa8;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+  height: 1rem;
+  line-height: 0;
 }
 
 #myBtn:hover {
-    background-color: #555;
-    border-right: solid 3px whitesmoke;
+  background-color: #555;
+  border-right: solid 3px whitesmoke;
 }
 #navbarLogo {
-    border: solid 1px whitesmoke!important;
-    padding: 5px;
-    border-radius: .5rem;
-    margin-right: 1rem;
-    color: whitesmoke;
+  border: solid 1px whitesmoke !important;
+  padding: 5px;
+  border-radius: 0.5rem;
+  margin-right: 1rem;
+  color: whitesmoke;
 }
-#projectContainer{
-    margin-top: 2rem;
-    margin-left: auto;
-    margin-right: auto;
+#projectContainer {
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
 }
-#spacer{
-    margin: auto;
+#spacer {
+  margin: auto;
 }
 .profileCard {
-    background-color: #768481;
-    border-radius: 20px;
-    box-shadow: 0px 10px 20px -10px rgb(0 0 0 / 75%);
-    color: #B3B8CD;
-    padding-top: 30px;
-    margin-top: 2rem!important;
-    width: 50vw;
-    max-width: 100%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 0!important;
-    padding-right: 0!important;
+  background-color: #768481;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px -10px rgb(0 0 0 / 75%);
+  color: #b3b8cd;
+  padding-top: 30px;
+  margin-top: 2rem !important;
+  width: 50vw;
+  max-width: 100%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .profileCard .pro {
-    color: #565d5c;
-    background-color: #fff;
-    border-radius: 3px;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 3px 7px;
-    position: absolute;
-    top: 30px;
-    left: 30px;
+  color: #565d5c;
+  background-color: #fff;
+  border-radius: 3px;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 3px 7px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
 
 .profileCard .round {
-    border: 1px solid #fff;
-    border-radius: 50%;
-    padding: 9px;
-    margin-bottom: 10px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 9px;
+  margin-bottom: 10px;
 }
 
 /*@media (max-width: 768px) {*/
@@ -113,139 +113,141 @@ p {
 /*}*/
 
 .projectCard {
-    background-color: #404846;
-    border-radius: 20px;
-    box-shadow: 0px 10px 20px -10px rgb(0 0 0 / 75%);
-    color: #B3B8CD;
-    padding-top: 30px;
-    width: 45vw;
-    max-width: 100%;
-    text-align: center;
-    padding-left: 0!important;
-    padding-right: 0!important;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1rem!important;
-    height: fit-content;
+  background-color: #404846;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px -10px rgb(0 0 0 / 75%);
+  color: #b3b8cd;
+  padding-top: 30px;
+  width: 45vw;
+  max-width: 100%;
+  text-align: center;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem !important;
+  height: fit-content;
 }
-#profileCardBio{
-    color: ghostwhite;
+
+#resumeDiv {
+  display: flex;
+  flex-direction: column;
+}
+
+#profileCardBio {
+  color: ghostwhite;
 }
 @media (max-width: 768px) {
-    .projectCard{
-        margin-bottom: 1rem!important;
-    }
+  .projectCard {
+    margin-bottom: 1rem !important;
+  }
 }
-.contactText{
 
-}
 .projectCard .pro {
-    color: #565d5c;
-    background-color: #fff;
-    border-radius: 3px;
-    font-size: 20px;
-    font-weight: bold;
-    position: absolute;
-    top: 30px;
-    left: 30px;
+  color: #565d5c;
+  background-color: #fff;
+  border-radius: 3px;
+  font-size: 20px;
+  font-weight: bold;
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
 
 .projectCard .round {
-    border: 1px solid #fff;
-    border-radius: 50%;
-    padding: 9px;
-    margin-bottom: 10px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 9px;
+  margin-bottom: 10px;
 }
-
 
 .social-media {
-    width: 100%;
-    left: 0;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-}
-#resumeDiv{
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .social-media i {
-    width: 50px;
-    height: 50px;
-    background: #565d5c;
-    border-radius: 50%;
-    color: #f1f1f1;
-    font-size: 20px;
-    line-height: 50px !important;
-    margin: 0px 7px;
-    position: relative;
+  width: 50px;
+  height: 50px;
+  background: #565d5c;
+  border-radius: 50%;
+  color: #f1f1f1;
+  font-size: 20px;
+  line-height: 50px !important;
+  margin: 0px 7px;
+  position: relative;
 }
 
 .projectLink:hover {
-    border: solid white .1em;
+  border: solid white 0.1em;
 }
-.contactLink:hover{
-    border: solid white .1em;
+.contactLink:hover {
+  border: solid white 0.1em;
 }
-
 
 button.primary {
-    background-color: #fff;
-    border: 1px solid #fff;
-    border-radius: 3px;
-    color: #231E39;
-    font-family: Montserrat, sans-serif;
-    font-weight: 500;
-    padding: 10px 25px;
-    margin: 20px 0px;
-    transition: 0.3s;
+  background-color: #fff;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  color: #231e39;
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  padding: 10px 25px;
+  margin: 20px 0px;
+  transition: 0.3s;
 }
 
 button.primary.ghost {
-    background-color: transparent;
-    color: #fff;
-    margin-top: 80px;
-    transition: 0.6s;
+  background-color: transparent;
+  color: #fff;
+  margin-top: 80px;
+  transition: 0.6s;
 }
 
 button.primary.ghost:hover {
-    background-color: #565d5c;
-    color: #fff;
-    border-color: #565d5c;
+  background-color: #565d5c;
+  color: #fff;
+  border-color: #565d5c;
 }
 
 .skills {
-    background-color: #565d5c;
-    text-align: left;
-    padding: 15px;
-    margin-top: 1rem;
-    border-radius: 0 0px 20px 20px;
+  background-color: #565d5c;
+  text-align: left;
+  padding: 15px;
+  margin-top: 1rem;
+  border-radius: 0 0px 20px 20px;
 }
-.demoDiv{
-    display: flex;
-    flex-direction: column;
+.demoDiv {
+  display: flex;
+  flex-direction: column;
 }
-.projectLinks{
-    display: flex;
-    justify-content: center;
+.projectLinks {
+  display: flex;
+  justify-content: center;
 }
 
 .skills ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .skills ul li {
-    border: 1px solid #fff;
-    border-radius: 2px;
-    display: inline-block;
-    font-size: 12px;
-    margin: 0 7px 7px 0;
-    padding: 7px;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  display: inline-block;
+  font-size: 12px;
+  margin: 0 7px 7px 0;
+  padding: 7px;
 }
 
 .skills ul li:hover {
-    color: #fff;
+  color: #fff;
+}
+
+.navbar-logo-name {
+  justify-content: center !important;
 }
